# styml

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
apps/: CMakeLists.txt
apps/encoder/: CMakeLists.txt  README.md  encoder.cpp
ci/: README.md  check.py  format.py  precommit.py  tidy.py
doc/vendors/: README.md
doc/vendors/rapidyaml/: parse_emit.cpp
doc/vendors/yaml-cpp/: parse.cpp
lib/: CMakeLists.txt  README.md  styml.h
lib/ut/: CMakeLists.txt  README.md  test_access.cpp  test_basic.cpp  test_main.cpp  test_main.h  test_parsing.cpp
test/: README.md  testsuite.py
test/patterns/: 1_array_base.txt  1_array_base.yaml  1_array_base_in_dict.txt  1_array_base_in_dict.yaml  1_comment_including_key_value.yaml  1_comment_inline.txt  1_comment_inline.yaml  1_comment_misc.txt  1_comment_misc.yaml  1_dict_base.txt  1_dict_nested.txt  1_dict_nested.yaml  1_dict_nextline_value.txt  1_dict_nextline_value.yaml  1_multiline_string_folded.txt  1_multiline_string_folded.yaml  1_multiline_string_litteral.txt  1_multiline_string_litteral.yaml  1_null_value.txt  1_null_value.yaml  1_string_base.txt  1_string_base.yaml  2_array_deep_nested.txt  2_array_deep_nested.yaml  2_array_nested_same_line.txt  2_array_nested_same_line.yaml  2_dict_deep_nested.txt  2_dict_deep_nested.yaml  2_mix_array_and_dict.txt  2_mix_array_and_dict.yaml  2_mix_dict_and_array.txt  2_mix_dict_and_array.yaml  2_mix_dict_and_array_base.txt  2_mix_dict_and_array_base.yaml  2_mix_dict_and_array_deep.txt  2_mix_dict_and_array_deep.yaml  2_multiline_string_chomp_folded.txt  2_multiline_string_chomp_folded.yaml  2_multiline_string_chomp_literal.txt  2_multiline_string_chomp_literal.yaml  (+26 more)
